# SP-Protocol

./: CMakeLists.txt  client  client.py  readme.md
include/websocketpp/: normal_function.hpp
src/: CMakeCache.txt  Makefile  buffer_in-2.pem  buffer_in-admin.pem  buffer_out-2.pem  buffer_out-admin.pem  client  client.cpp  client1_exec  cmake_install.cmake  data_counter.txt  key.txt  main.cpp  my_executable  private_key-1.pem  private_key-2.pem  private_key-admin.pem  private_key_pkcs8.pem  public_key-1.pem  public_key-2.pem  public_key-admin.pem  public_key.pem  public_key_fingerprint-1.pem  public_key_fingerprint-2.pem  public_key_fingerprint-admin.pem  public_key_pkcs8.pem  result.txt  server  server.cpp  signature-1.pem  signature-2.pem  signature-admin.pem  signature-admin.txt  suspicious.txt  test  test.cpp  testing  testing.cpp
src/cache/: aes_key-1.txt  aes_key-2.txt  aes_key-admin.txt  buffer_in-1.pem  buffer_in-2.pem  buffer_in-admin.pem  buffer_out-1.pem  buffer_out-2.pem  buffer_out-admin.pem  data_counter-server.txt  data_counter.txt  iv-1.txt  iv-2.txt  iv-admin.txt  private_key-1.pem  private_key-2.pem  private_key-3.pem  private_key-admin.pem  private_key-server1.pem  public_key-1.pem  public_key-2.pem  public_key-3.pem  public_key-admin.pem  public_key-server1.pem  public_key_fingerprint-1.pem  public_key_fingerprint-2.pem  public_key_fingerprint-server1.pem  signature-1.pem  signature-2.pem  signature-3.pem  signature-admin.pem  signature-server1.pem
src/server1/: client.cpp  client1_exec  server.cpp
src/server1/cache/: aes_key-iasduvfiabfb.txt  aes_key-taadifnopadbfgiadbf.txt  aes_key-tester.txt  aes_key-x.txt  aes_key-y.txt  buffer_in-2.pem  buffer_in-iasduvfiabfb.pem  buffer_in-taadifnopadbfgiadbf.pem  buffer_in-tester.pem  buffer_in-x.pem  buffer_in-y.pem  buffer_out-iasduvfiabfb.pem  buffer_out-taadifnopadbfgiadbf.pem  buffer_out-tester.pem  buffer_out-x.pem  buffer_out-y.pem  data_counter.txt  iv-1.txt  iv-taadifnopadbfgiadbf.txt  iv-tester.txt  iv-x.txt  private_key-1.pem  private_key-2.pem  private_key-iasduvfiabfb.pem  private_key-server1.pem  private_key-server2.pem  private_key-taadifnopadbfgiadbf.pem  private_key-tester.pem  private_key-x.pem  private_key-y.pem  public_key-1.pem  public_key-2.pem  public_key-iasduvfiabfb.pem  public_key-server1.pem  public_key-server2.pem  public_key-taadifnopadbfgiadbf.pem  public_key-tester.pem  public_key-x.pem  public_key-y.pem  public_key_fingerprint-1.pem  (+14 more)
src/server2/: client.cpp  client2_exec  server.cpp
src/server2/cache/: aes_key-test.txt  buffer_in-test.pem  buffer_out-test.pem  buffer_out-xdd.pem  data_counter-server.txt  data_counter.txt  iv-xdd.txt  private_key-server1.pem  private_key-server2.pem  private_key-test.pem  private_key-xdd.pem  public_key-server1.pem  public_key-server2.pem  public_key-test.pem  public_key-xdd.pem  public_key_fingerprint-server1.pem  public_key_fingerprint-server2.pem  public_key_fingerprint-test.pem  public_key_fingerprint-xdd.pem  signature-server2.pem  signature-test.pem  signature-xdd.pem
